--- a/src/options/options.html
+++ b/src/options/options.html
@@ -47,7 +47,7 @@
 
       <div>
         <label>
-          <input type="radio" name="theme" value="auto" />
+          <input type="radio" name="theme" value="system" />
           Automatic (follow OS setting)
         </label>
       </div>
