--- a/tests/fixtures/non-object-json.html
+++ b/tests/fixtures/non-object-json.html
@@ -1,7 +1,7 @@
 <!--
   EXPECT {
     "formatted": false,
-    "note": "Does not start with { or ]",
+    "note": "Does not start with { or [",
     "rawLength": 4
   }
 -->
